[gd_scene load_steps=5 format=3 uid="uid://cyimkh1kw78at"]

[ext_resource type="Script" uid="uid://5axvhki5xx31" path="res://gui/settings_menu/settings_menu.gd" id="1_cehoh"]
[ext_resource type="PackedScene" uid="uid://q8o4t7r6gi5g" path="res://gui/settings_menu/ui_settings_check_box.tscn" id="2_fasm0"]
[ext_resource type="PackedScene" uid="uid://lcffax1d8w7w" path="res://gui/settings_menu/slider_hbox.tscn" id="2_vbnwq"]
[ext_resource type="PackedScene" uid="uid://bqy1qfsxakkbd" path="res://gui/settings_menu/drop_down.tscn" id="3_vbnwq"]

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cehoh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="AudioTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"
horizontal_alignment = 1

[node name="MasterVolumeSlider" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("2_vbnwq")]
unique_name_in_owner = true
layout_mode = 2
title = "Master:"
value = 75.0

[node name="MusicVolumeSlider" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("2_vbnwq")]
unique_name_in_owner = true
layout_mode = 2
title = "Music:"
value = 100.0

[node name="SoundVolumeSlider" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("2_vbnwq")]
unique_name_in_owner = true
layout_mode = 2
title = "Sound:"
value = 100.0

[node name="GraphicsTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Graphics"
horizontal_alignment = 1

[node name="ResolutionsDropdown" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("3_vbnwq")]
unique_name_in_owner = true
layout_mode = 2
title = "Resolutions:"

[node name="ScreenTypeDropdown" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("3_vbnwq")]
unique_name_in_owner = true
layout_mode = 2
title = "ScreenType:"
options = Array[String](["FullScreen", "Windowed", "BorderlessWindowed"])

[node name="VSyncToggle" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("2_fasm0")]
unique_name_in_owner = true
layout_mode = 2
title = "VSync:"

[node name="ScalingResolution" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("2_vbnwq")]
unique_name_in_owner = true
layout_mode = 2
title = "Scaling Resolution:"
value = 100.0

[node name="FSRToggle" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("2_fasm0")]
unique_name_in_owner = true
layout_mode = 2
title = "FSR2:"

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="KeyBindButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Change Keybinds"

[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/SoundVolumeSlider" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="option_selected" from="Panel/MarginContainer/VBoxContainer/ResolutionsDropdown" to="." method="_on_resolutions_dropdown_option_selected"]
[connection signal="option_selected" from="Panel/MarginContainer/VBoxContainer/ScreenTypeDropdown" to="." method="_on_screen_type_dropdown_option_selected"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/VSyncToggle" to="." method="_on_v_sync_toggle_toggled"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/ScalingResolution" to="." method="_on_scaling_resolution_value_changed"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/FSRToggle" to="." method="_on_fsr_toggle_toggled"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/KeyBindButton" to="." method="_on_key_bind_button_pressed"]
